ex2.02/project_v1.0/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: persisted-volume
          persistentVolumeClaim:
            claimName: persisted-claim
      containers:
        - name: todo-app
          imagePullPolicy: Always
          volumeMounts:
            - name: persisted-volume
              mountPath: /usr/src/app/cache
          image: maxmynter/devopsk8s-todo-app@sha256:188b25e2c212bc92841b48f0d3d0c9443dcc14501a6ac86b27a23e8c55453607
        - name: todo-backend
          image: maxmynter/devopsk8s-todo-backend@sha256:c382e9b2b4e1264a266d6863a519cedf530508ca31b434210e4aef034d02146f
