ex2.02/project_v1.0/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 4001
