ex2.02/project_v1.0/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-app-svc
              port:
                number: 1234
        - path: /image
          pathType: Prefix
          backend:
            service:
              name: todo-app-svc
              port:
                number: 1234
        - path: /config
          pathType: Prefix
          backend:
            service:
              name:  todo-app-svc
              port:
                number: 1234
        - path: /todos
          pathType: Prefix
          backend:
            service:
              name: todo-backend-svc
              port:
                number: 2345
